--- a/component.html
+++ b/component.html
@@ -180,7 +180,7 @@
       </p>
       <h3 class="component-heading">Badge with Icons</h3>
       <p class="component-navbar-item">
-        To show cart or notification count, you can use number badge. Check code below to copy the html part as is.
+        To show cart or stackedfication count, you can use number badge. Check code below to copy the html part as is.
       </p>
       <div class="badge-items flex">
         <button  class="badge-button flex center badge-xl">
@@ -314,7 +314,7 @@
       </p>
       <h3 class="component-heading">Cards with badges</h3>
       <p class="component-navbar-item">
-        To show cart or notification count, you can use number badge. Check code below to copy the html part as is.
+        To show cart or stackedfication count, you can use number badge. Check code below to copy the html part as is.
       </p>
       <div class="badge-items flex">
         <div class="card-container">
@@ -581,7 +581,7 @@
 
     <section class="main-title" id="lists">
       <h2 class="component-heading" >Lists</h2>
-      <p class="component-navbar-item">Lists can be used at so many places, navigation bar, stacked notifications, article pages, etc.</p>
+      <p class="component-navbar-item">Lists can be used at so many places, navigation bar, stacked stackedfications, article pages, etc.</p>
       <h3 class="component-heading">Spaced (normal lists)</h3>
       <p class="component-navbar-item">
         The most basic list group is an unordered list with list items and the proper classes. Build upon it with the options that follow, or with your own CSS as needed. </p>
@@ -613,54 +613,54 @@
   sandbox="allow-scripts allow-same-origin">
 </iframe>
 
-      <h3 class="component-heading">Stacked (Notification Page)</h3>
+      <h3 class="component-heading">Stacked (notification Page)</h3>
       <p class="component-navbar-item">
         This is stacked list without bullets. We can add desired component inside "li" element. Check below code for stacked list.
       </p>
 
       <div class="list-items flex">
         <ul class="list-item">
-          <li class="noti-list">
-            <div class="noti-image flex center">
+          <li class="stacked-list">
+            <div class="stacked-image flex center">
               <img
-                class="noti-image-list"
+                class="stacked-image-list"
                 src="./Asset/watsap.png"
                 alt="watsapp"
               />
             </div>
-            <div class="noti-text">
-              <h4 class="noti-heading">Watsapp</h4>
-              <p class="noti-msg">
+            <div class="stacked-text">
+              <h4 class="stacked-heading">Watsapp</h4>
+              <p class="stacked-msg">
                 Hello dev, You have a message...
               </p>
             </div>
           </li>
-          <li class="noti-list">
-            <div class="noti-image">
+          <li class="stacked-list">
+            <div class="stacked-image">
               <img
-                class="noti-image-list"
+                class="stacked-image-list"
                 src="./Asset/facebook.png"
                 alt="Facebook"
               />
             </div>
-            <div class="noti-text">
-              <h4 class="noti-heading">Facebook</h4>
-              <p class="noti-msg">
+            <div class="stacked-text">
+              <h4 class="stacked-heading">Facebook</h4>
+              <p class="stacked-msg">
                 Hello dev, You have a message...
               </p>
             </div>
           </li>
-          <li class="noti-list">
-            <div class="noti-image">
+          <li class="stacked-list">
+            <div class="stacked-image">
               <img
-                class="noti-image-list"
+                class="stacked-image-list"
                 src="./Asset/instagram.png"
                 alt="Facebook"
               />
             </div>
-            <div class="noti-text">
-              <h4 class="noti-heading">Instagram</h4>
-              <p class="noti-msg">
+            <div class="stacked-text">
+              <h4 class="stacked-heading">Instagram</h4>
+              <p class="stacked-msg">
                 Hello dev, You have a message...
               </p>
             </div>
@@ -668,7 +668,7 @@
         </ul>
       </div>
       <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list-item%2522%253E%250A%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522noti-list%2522%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522noti-image%2520flex%2520center%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520class%253D%2522noti-image-list%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522.%252FAsset%252Fwatsap.png%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522watsapp%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522noti-text%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch4%2520class%253D%2522noti-heading%2522%253EWatsapp%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522noti-msg%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Hello%2520dev%252C%2520You%2520have%2520a%2520message...%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%253C%252Ful%253E"
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cul%2520class%253D%2522list-item%2522%253E%250A%2520%2520%2520%2520%2520%253Cli%2520class%253D%2522stacked-list%2522%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522stacked-image%2520flex%2520center%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520class%253D%2522stacked-image-list%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522.%252FAsset%252Fwatsap.png%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522watsapp%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522stacked-text%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch4%2520class%253D%2522stacked-heading%2522%253EWatsapp%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522stacked-msg%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Hello%2520dev%252C%2520You%2520have%2520a%2520message...%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253C%252Fli%253E%250A%253C%252Ful%253E"
   style="width: 100%; height: 300px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
