feat : Grid added

--- a/component.html
+++ b/component.html
@@ -738,6 +738,27 @@
 </iframe>
     </section>
 
+     <!-- --- Grid ---  -->
+
+     <section class="main-title" id="Grid">
+      <h2 class="component-heading">Grid</h2>
+      <p class="component-navbar-item">Use grid when you want sections in view. Check below some examples of side by side cards.</p>
+      <h3 class="component-heading">Two items in the Grid</h3>
+      <div class="grid-items">
+        <div class="grid-container">
+          <div class="grid-item"><img class="grid-image" src="https://u-and-i.netlify.app/Components/images/blog3-re.jpg" alt="photo"></div>
+          <div class="grid-item flex center">Combo pack<br>Starting at Rs.799</div>
+        </div>
+      
+      <h3 class="component-heading">Three items in the Grid</h3>
+        <div class="grid-container-3">
+          <div class="grid-item"><img class="grid-image" src="https://u-and-i.netlify.app/Components/images/blog3-re.jpg" alt="photo"></div>
+          <div class="grid-item flex center">Combo pack<br>Starting at Rs.799</div>
+          <div class="grid-item flex center">Explore</div>    
+        </div>
+      </div>
+    </section>
+
     <!-- ---- Footer section ---- -->
 
     <section class="footer">
