--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <!-- ---navbar---- -->
-  
-    <nav class="navbar flex flex-wrap" >
+
+    <nav class="navbar flex flex-wrap">
       <a href="index.html" class="Logo" href="#"><strong>YASHODA</strong></a>
       <ul class="navbar-list flex">
         <li class="navbar-list-item"><a href="index.html">Home</a></li>
@@ -52,18 +52,11 @@
           </h3>
           <div class="btn-wrapper">
             <a href="./component.html" class="btn btn-use">Get Started</a>
-            <a href="./component.html" class="btn btn-docs"
-              >Installation</a
-            >
+            <a href="./component.html" class="btn btn-docs">Installation</a>
           </div>
         </div>
         <div class="right-main-section-container">
-          <img
-            class="image"
-            src="Asset/background.png"
-          
-            alt=""
-          />
+          <img class="image" src="Asset/background.png" alt="" />
         </div>
       </div>
     </section>
