Feat : added installation page

--- a/component.html
+++ b/component.html
@@ -16,7 +16,7 @@
     <!-- ---navbar---- -->
 
     <nav class="navbar flex flex-wrap" >
-      <a href="index.html" class="Logo" href="#"><strong>YASHODA</strong></a>
+      <a href="index.html" class="Logo" href="#">YASHODA</a>
       <ul class="navbar-list flex">
         <li class="navbar-list-item"><a href="index.html">Home</a></li>
         <li class="navbar-list-item ">
@@ -43,8 +43,16 @@
 
     <!-- ---- sidebar ---- -->
     <div class="sidebar">
-      <h3>Components</h3>
+      <h3 class="Installation">Getting Started</h3>
       <ul class="nav">
+        <li>
+          <a href="./installation.html">
+            <span>Introduction</span>
+          </a>
+        </li>
+        </ul>
+      <h3 class="components">Components</h3>
+      <ul class="nav2">
         <li>
           <a href="#avatars">
             <span>Avatar</span>
@@ -184,11 +192,11 @@
       </p>
       <div class="badge-items flex">
         <button  class="badge-button flex center badge-xl">
-          <i class="fas fa-bell fa-4x"></i>
+          <i class="fas fa-bell fa-3x"></i>
           <span class="icon-button-badge flex center icon-xl">2</span>
         </button>
         <button  class="badge-button flex center badge-lg">
-          <i class="fas fa-envelope fa-3x"></i>
+          <i class="fas fa-envelope fa-2x"></i>
           <span class="icon-button-badge flex center icon-lg  ">2</span>
         </button>
         <button  class="badge-button flex center badge-md">
@@ -827,6 +835,6 @@
       ></a>
     </section>
 
-    <script src="./js/modal.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
