--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ---navbar---- -->
 
     <nav class="navbar flex flex-wrap">
-      <a href="index.html" class="Logo" href="#"><strong>YASHODA</strong></a>
+      <a href="index.html" class="Logo" href="#">YASHODA</a>
       <ul class="navbar-list flex">
         <li class="navbar-list-item"><a href="index.html">Home</a></li>
         <li class="navbar-list-item icons">
@@ -52,7 +52,7 @@
           </h3>
           <div class="btn-wrapper">
             <a href="./component.html" class="btn btn-use">Get Started</a>
-            <a href="./component.html" class="btn btn-docs">Installation</a>
+            <a href="./installation.html      " class="btn btn-docs">Installation</a>
           </div>
         </div>
         <div class="right-main-section-container">
