--- a/installation.html
+++ b/installation.html
@@ -151,10 +151,10 @@
             script near the end of your pages, right before the closing body tag, to enable them.</p>
 
             <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Clink%250A%2520%2520%2520%2520%2520rel%253D%2522stylesheet%2522%2520%250A%2520%2520%2520%2520%2520%2520href%253D%2522https%253A%252F%252Fyashoda-component-ui.netlify.app%252Fjs%252Fmain.js%2522%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%252F%253E%250A"
-  style="width: 100%; height: 160px; border:0; transform: scale(1); overflow:hidden;"
-  sandbox="allow-scripts allow-same-origin">
-</iframe>
+            src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cscript%2520src%253D%2522https%253A%252F%252Fyashoda-component-ui.netlify.app%252Fjs%252Fmain.js%2522%253E%253C%252Fscript%253E%250A"
+            style="width: 100%; height: 185px; border:0; transform: scale(1); overflow:hidden;"
+            sandbox="allow-scripts allow-same-origin">
+          </iframe>
         
       </section>
 
