--- a/component.html
+++ b/component.html
@@ -327,7 +327,7 @@
       <div class="badge-items flex">
         <div class="card-container">
           <h4 class="card-with-badge"><i class="fas fa-heart"></i></h4>
-          <img
+          <img class="card-image"
             src="Asset/jacket.jpg"
             alt="Jacket"
           />
@@ -339,7 +339,7 @@
         </div>
       </div>
       <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2522%253E%250A%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ci%2520class%253D%2522fas%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2522%253E%250A%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ci%2520class%253D%2522fas%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522card-image%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
   style="width: 100%; height: 361px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
@@ -351,7 +351,7 @@
       <div class="badge-items flex">
         <div class="card-container">
           <h4 class="card-with-badge"><a href="">X</a></h4>
-          <img
+          <img class="card-image"
             src="Asset/jacket.jpg"
             alt="Jacket"
           />
@@ -363,11 +363,10 @@
         </div>
       </div>
       <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2522%253E%250A%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ca%2520href%253D%2522%2522%253EX%253C%252Fa%253E%253C%252Fh4%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2522%253E%250A%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ca%2520href%253D%2522%2522%253EX%253C%252Fa%253E%253C%252Fh4%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522card-image%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
   style="width: 100%; height: 361px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
-    </iframe>
 <h3 class="component-heading">Cards with text overlay</h3>
       <p class="component-navbar-item">
         Badges can be integrated with Avatars by showing colors to show the online status of user. 
@@ -375,7 +374,7 @@
       <div class="badge-items flex">
         <div class="card-container">
             <h4 class="card-with-badge"><a href="">X</a></h4>
-            <img
+            <img class="card-image"
               src="Asset/jacket.jpg"
               alt="Jacket"
             />
@@ -390,7 +389,7 @@
           </div>
       </div>
       <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2522%253E%250A%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ca%2520href%253D%2522%2522%253EX%253C%252Fa%253E%253C%252Fh4%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522image-overlay%2520flex%2520center%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522image-title%2522%253EOUT%2520OF%2520STOCK%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2522%253E%250A%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ca%2520href%253D%2522%2522%253EX%253C%252Fa%253E%253C%252Fh4%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522image-cart%2522%250A%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522image-overlay%2520flex%2520center%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522image-title%2522%253EOUT%2520OF%2520STOCK%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
   style="width: 100%; height: 414px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
@@ -421,7 +420,7 @@
       <div class="badge-items flex">
         <div class="card-container">
           <h4 class="card-with-badge"><i class="fas fa-heart"></i></h4>
-          <img
+          <img class="card-image"
             src="Asset/jacket.jpg"
             alt="Jacket"
           />
@@ -434,7 +433,7 @@
       </div>
       </div>
       <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2522%253E%250A%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ci%2520class%253D%2522fas%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2522%253E%250A%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ci%2520class%253D%2522fas%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522image-card%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
   style="width: 100%; height: 361px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
@@ -445,7 +444,7 @@
       <div class="badge-items flex">
         <div class="card-container shadow">
           <h4 class="card-with-badge"><i class="fas fa-heart"></i></h4>
-          <img
+          <img class="card-image"
             src="Asset/jacket.jpg"
             alt="Jacket"
           />
@@ -457,7 +456,7 @@
         </div>
       </div>
       <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2520shadow%2522%253E%250A%2520%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ci%2520class%253D%2522fas%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520"
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522card-container%2520shadow%2522%253E%250A%2520%2520%2520%2520%2520%253Ch4%2520class%253D%2522card-with-badge%2522%253E%253Ci%2520class%253D%2522fas%2520fa-heart%2522%253E%253C%252Fi%253E%253C%252Fh4%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522image-card%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520src%253D%2522Asset%252Fjacket.jpg%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520alt%253D%2522Jacket%2522%250A%2520%2520%2520%2520%2520%2520%2520%2520%252F%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522description%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522card-heading%2522%253EGirl%2520Premium%2520Jacket%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522price%2522%253E%25242000%253C%252Fp%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522add-cart-btn%2522%253EAdd%2520to%2520Cart%253C%252Fbutton%253E%250A%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520"
   style="width: 100%; height: 378px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
