--- a/component.html
+++ b/component.html
@@ -807,6 +807,11 @@
           <div class="grid-item"><img class="grid-image" src="https://u-and-i.netlify.app/Components/images/blog3-re.jpg" alt="photo"></div>
           <div class="grid-item flex center">Combo pack<br>Starting at Rs.799</div>
         </div>
+        <iframe
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522grid-container%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522grid-item%2522%253E%250A%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522grid-image%2522%2520src%253D%2522https%253A%252F%252Fu-and-i.netlify.app%252FComponents%252Fimages%252Fblog3-re.jpg%2522%2520alt%253D%2522photo%2522%253E%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522grid-item%2520flex%2520center%2522%253ECombo%2520pack%253Cbr%253EStarting%2520at%2520Rs.799%253C%252Fdiv%253E%250A%253C%252Fdiv%253E"
+  style="width: 100%; height: 255px; border:0; transform: scale(1); overflow:hidden;"
+  sandbox="allow-scripts allow-same-origin">
+</iframe>
       
       <h3 class="component-heading">Three items in the Grid</h3>
         <div class="grid-container-3">
@@ -815,6 +820,11 @@
           <div class="grid-item flex center">Explore</div>    
         </div>
       </div>
+      <iframe
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522grid-container-3%2522%253E%250A%2520%2520%2520%253Cdiv%2520class%253D%2522grid-item%2522%253E%250A%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522grid-image%2522%2520src%253D%2522https%253A%252F%252Fu-and-i.netlify.app%252FComponents%252Fimages%252Fblog3-re.jpg%2522%2520alt%253D%2522photo%2522%253E%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%253Cdiv%2520class%253D%2522grid-item%2520flex%2520center%2522%253ECombo%2520pack%253Cbr%253EStarting%2520at%2520Rs.799%253C%252Fdiv%253E%250A%2520%2520%2520%253Cdiv%2520class%253D%2522grid-item%2520flex%2520center%2522%253EExplore%253C%252Fdiv%253E%2520%2520%2520%2520%250A%253C%252Fdiv%253E"
+  style="width: 100%; height: 273px; border:0; transform: scale(1); overflow:hidden;"
+  sandbox="allow-scripts allow-same-origin">
+</iframe>
     </section>
 
 
